--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tudo sobre o COVId-19</title>
+<title>COVID-19</title>
 <link rel="stylesheet" type="text/css" href="_CSS/estilo.css"/>
 </head>
     <body>
